--- a/redux-practice/src/pages/admin/components/sidebar/styles.css
+++ b/redux-practice/src/pages/admin/components/sidebar/styles.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  border-right: 1px solid rgb(234, 234, 239);
-  height: 100%;
+  border-right: 1px solid var(--border-primary);
+  background-color: var(--bg-primary);
 }
 
 .sidebar__add {
