--- a/redux-practice/src/styles/base.css
+++ b/redux-practice/src/styles/base.css
@@ -3,6 +3,11 @@
   src: url(../assets/fonts/Roboto-Regular.ttf);
 }
 
+@font-face {
+  font-family: Roboto-Bold;
+  src: url(../assets/fonts/Roboto-Bold.ttf);
+}
+
 body {
   font-family: "Roboto";
   background: var(--bg-primary);
